objects/EUR_CRM_MassUploadLog__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Configuration__c</fullName>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_records__c</fullName>
        <label>Number of records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MassUploadLog (EU)</label>
    <nameField>
        <displayFormat>MUL-{0000}</displayFormat>
        <label>EUR_CRM_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MassUploadLogs (EU)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>